# DIstData

./: CMakeLists.txt  README.md
src/: Client.cpp  Communication.cpp  Communication.h  CoordinatorNode.cpp  DataNode.cpp  FailureRecoveryTest.cpp  QueryParser.cpp  TestClient.cpp  TestServer.cpp  message.h  message_deserializer.cpp  message_deserializer.h  message_serializer.cpp  message_serializer.h
